# silk-chiffon

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  dprint.json  justfile  pyproject-rye.toml  pyproject.toml  pyrightconfig.json  python.just  rust.just  silk_chiffon.pyi  test_python.sh
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  python.yaml  python.yml  python2.yaml  release-dev-2.yml  release-dev-3.yml  release-dev.yml  release.yml  rust-release-dev.yml  rust.yml
benches/: parquet_writer.rs  partition_benchmark.rs  partition_distributions_benchmark.rs  partition_formats_benchmark.rs  partition_sorting_benchmark.rs  partition_string_keys_benchmark.rs  partitioning.rs  query_benchmark.rs  split_benchmark.rs  split_distributions_benchmark.rs  split_formats_benchmark.rs  split_sorting_benchmark.rs  split_string_keys_benchmark.rs  transform_to_parquet.rs
docs/: CLI.md
examples/: gen-docs.rs
python/chiffon/: __init__.py
python/daisy/: __init__.py
scripts/: bench_e2e.py  bench_isolated.sh  bench_monitor.py  benchmark_duckdb_vs_silk.py  benchmark_memory_pool.py  plot_monitor.py  pyproject.toml
silk_chiffon/: __init__.py  __init__.pyi
src/: lib.rs  main.rs  system.rs
src/commands/: arrow.rs  arrow_to_arrow.rs  arrow_to_duckdb.rs  arrow_to_parquet.rs  duckdb.rs  inspect.rs  merge_arrow_to_arrow.rs  merge_arrow_to_duckdb.rs  merge_arrow_to_parquet.rs  merge_to_arrow.rs  merge_to_duckdb.rs  merge_to_parquet.rs  mod.rs  parquet.rs  partition_arrow_to_arrow.rs  partition_arrow_to_parquet.rs  split_to_arrow.rs  split_to_parquet.rs  transform.rs
src/converters/: arrow.rs  arrow_to_arrow.rs  arrow_to_duckdb.rs  duckdb.rs  mod.rs  parquet.rs
src/converters/arrow_to_parquet/: converter.rs  mod.rs  ndv_calculator.rs  writer_builder.rs
src/converters/parquet/: config.rs  converter.rs  metadata.rs  mod.rs  ndv_calculator.rs  tests.rs  writer_builder.rs
src/converters/partition_arrow/: converter.rs  mod.rs  output_template.rs  partition_writer.rs
src/converters/split/: converter.rs  mod.rs  output_template.rs  partition_writer.rs  slice_coalescer.rs
src/inspect/: arrow_ipc.rs  mod.rs
src/inspect/output/: mod.rs  text.rs
src/inspection/: arrow.rs  identify.rs  inspectable.rs  magic.rs  mod.rs  parquet.rs  readers.rs  style.rs  vortex.rs
src/io_strategies/: input_strategy.rs  mod.rs  output_file_info.rs  output_strategy.rs  partitioner.rs  path_template.rs
src/operations/: data_operation.rs  identity.rs  mod.rs  query.rs  sort.rs
src/pipeline/: memory_pool.rs  mod.rs  pipeline.rs
src/python/: arrow.rs  common.rs  duckdb.rs  merge_to_arrow.rs  merge_to_duckdb.rs  merge_to_parquet.rs  mod.rs  parquet.rs  split_to_arrow.rs  split_to_parquet.rs
src/sinks/: arrow.rs  data_sink.rs  duckdb.rs  mod.rs  object_writer.rs  parquet.rs  vortex.rs
src/sinks/parquet/: eager_writer.rs  mod.rs  parallel_writer.rs  pools.rs  sequential_writer.rs  stream_writer.rs  writer.rs  writer_trait.rs
src/sinks/parquet/adaptive_writer/: analysis.rs  config.rs  encoding.rs  mod.rs  pipeline.rs
src/sources/: arrow.rs  arrow_file.rs  arrow_stream.rs  data_source.rs  duckdb.rs  mod.rs  parquet.rs  prepared_source.rs  vortex.rs
src/storage/: config.rs  gcs.rs  glob.rs  input.rs  location.rs  mod.rs  output.rs  registry.rs
src/utils/: arrow_io.rs  arrow_versioning.rs  blocking.rs  cancellable_channel.rs  channel_stream_provider.rs  collections.rs  filesystem.rs  first_error.rs  memory.rs  mod.rs  ordered_channel.rs  ordered_demux.rs  parquet_inspection.rs  projected_stream.rs  query_executor.rs  rayon_bridge.rs  test_data.rs  test_helpers.rs
tests/: arrow_ipc_inflation_test.rs  arrow_to_duckdb_integration_test.rs  arrow_to_parquet_integration_test.rs  budget_tests.rs  cli_docs.rs  cli_tests.rs  duckdb_integration_test.rs  estimation_tests.rs  gcs_integration.rs  inspect_integration_test.rs  merge_arrow_to_arrow_integration_test.rs  merge_arrow_to_duckdb_integration_test.rs  merge_arrow_to_parquet_integration_test.rs  merge_to_arrow_integration_test.rs  merge_to_duckdb_integration_test.rs  merge_to_parquet_integration_test.rs  parquet_integration_test.rs  partition_arrow_to_arrow_integration_test.rs  partition_arrow_to_parquet_integration_test.rs  query_integration_test.rs  round_trip_split_merge_test.rs  split_to_arrow_integration_test.rs  split_to_parquet_integration_test.rs  test_python.py  transform_cli_data_verification_test.rs  transform_integration_test.rs
tests/files/: create_files.sh  datafusion_cli_create_files.sql  duckdb_cli_create_files.sql  people.arrow  people.duckdb  people.parquet  people.stream.arrow
