[package]
name = "silk_chiffon"
version = "0.1.0"
edition = "2024"
authors = ["Cora Sutton <cora@sutton.me>"]
description = "Silky smooth conversion between columnar data formats 💝"
license = "MIT"
repository = "https://github.com/acuitymd/silk-chiffon"
homepage = "https://github.com/acuitymd/silk-chiffon"
readme = "README.md"
categories = ["command line utilities", "data processing", "columnar data"]

[[bin]]
name = "silk-chiffon"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.100"
bytesize = "2"
async-stream = "0.3"
async-trait = "^0.1.89"
arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
camino = { version = "1.2.2", features = ["serde1"] }
chrono = "0.4.42"
clap = { version = "^4.5.53", features = ["default", "derive"] }
clap_complete = "^4.5"
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "1cc9bcd52e5901f9085864c032c5f51a1932a075" }
futures = "^0.3.31"
glob = "^0.3.3"
minijinja = "^2.12.0"
owo-colors = "4"
parquet = { version = "^57.0.0", features = [
  "default",
  "async",
  "json",
  "arrow_canonical_extension_types",
] }
percent-encoding = "^2.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.145"
strum_macros = "^0.27.2"
tabled = { version = "0.18", features = ["ansi"] }
tempfile = "^3.23.0"
tokio = { version = "^1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "fs",
  "sync",
] }
tokio-par-util = "0.2.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
uuid = { version = "^1.18.1", features = ["v4"] }
humansize = "2.1"
num-format = "0.4"

# Vortex support (Arrow 56 - compatible with our Arrow 57)
vortex = { version = "0.56.0", features = ["tokio", "files"] }
vortex-array = "0.56.0"
vortex-session = "0.56.0"
arrow-array = "56"
arrow-ipc = "56"
arrow-schema = "56"

[features]
default = []

[dev-dependencies]
assert_cmd = "^2.1.1"
criterion = { version = "^0.8", features = ["html_reports"] }
predicates = "^3.1.3"

[[bench]]
name = "parquet_writer"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev] # faster dev builds
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2 # optimize deps, not your code

[profile.profiling]
inherits = "release"
debug = true

# NOTE: native profile requires RUSTFLAGS="-C target-cpu=native"
# use `just build-native` which sets this automatically
[profile.native]
inherits = "release"

[lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
similar_names = "warn"
