[package]
name = "silk_chiffon"
version = "0.1.0"
edition = "2024"
authors = ["Cora Sutton <cora@sutton.me>"]
description = "Silky smooth conversion between columnar data formats 💝"
license = "MIT"
repository = "https://github.com/acuitymd/silk-chiffon"
homepage = "https://github.com/acuitymd/silk-chiffon"
readme = "README.md"
categories = ["command line utilities", "data processing", "columnar data"]

[[bin]]
name = "silk-chiffon"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.100"
bytesize = "^2.3.1"
async-stream = "^0.3.6"
async-trait = "^0.1.89"
arrow = { version = "^57.2.0", features = ["default", "ipc_compression"] }
camino = { version = "^1.2.2", features = ["serde1"] }
chrono = "^0.4.43"
clap = { version = "^4.5.54", features = ["default", "derive"] }
clap_complete = "^4.5.65"
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "9f3ddcecd6033a9d55161175d5dbe29697a9a922" }
futures = "^0.3.31"
glob = "^0.3.3"
humansize = "^2.1.3"
minijinja = "^2.14.0"
num-format = "^0.4.4"
owo-colors = "^4.2.3"
parquet = { version = "^57.2.0", features = [
  "default",
  "async",
  "json",
  "arrow_canonical_extension_types",
] }
percent-encoding = "^2.3.2"
rayon = "1.11.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
strum_macros = "^0.27.2"
tabled = { version = "^0.20.0", features = ["ansi"] }
tempfile = "^3.24.0"
tokio = { version = "^1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "fs",
  "sync",
] }
tokio-util = "^0.7.18"
uuid = { version = "^1.19.0", features = ["v4"] }
vortex = { version = "^0.58.0", features = ["tokio", "files"] }

[features]
default = []

[dev-dependencies]
assert_cmd = "^2.1.2"
criterion = { version = "^0.8.1", features = ["html_reports"] }
predicates = "^3.1.3"

[[bench]]
name = "parquet_writer"
harness = false

[[bench]]
name = "partitioning"
harness = false

[[bench]]
name = "transform_to_parquet"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev] # faster dev builds
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2 # optimize deps, not your code

[profile.profiling]
inherits = "release"
debug = true

# NOTE: native profile requires RUSTFLAGS="-C target-cpu=native"
# use `just build-native` which sets this automatically
[profile.native]
inherits = "release"

[lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
similar_names = "warn"
