[package]
name = "silk_chiffon"
version = "0.1.0"
edition = "2024"
authors = ["Cora Sutton <cora@sutton.me>"]
description = "Silky smooth conversion between columnar data formats 💝"
license = "MIT"
repository = "https://github.com/acuitymd/silk-chiffon"
homepage = "https://github.com/acuitymd/silk-chiffon"
readme = "README.md"
categories = ["command line utilities", "data processing", "columnar data"]

[[bin]]
name = "silk-chiffon"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.102"
apply_if = "^1.2.1"
bytesize = "^2.3.1"
async-stream = "^0.3.6"
async-trait = "^0.1.89"
arrow = { version = "^58.3.0", features = ["default", "ipc_compression"] }
camino = { version = "^1.2.2", features = ["serde1"] }
chrono = "^0.4.44"
clap = { version = "^4.6.1", features = ["default", "derive"] }
clap_complete = "^4.6.5"
clap-markdown = { version = "^0.1.5", optional = true }
datafusion = { version = "^53.1.0", features = [
  "array_expressions",
  "default",
] }
futures = "^0.3.32"
glob = "^0.3.3"
humansize = "^2.1.3"
lru = "^0.18.0"
mimalloc = "^0.1.50"
minijinja = "^2.20.0"
num-format = "^0.4.4"
owo-colors = "^4.3.0"
parking_lot = "^0.12.5"
parquet = { version = "^58.3.0", features = [
  "default",
  "async",
  "json",
  "arrow_canonical_extension_types",
] }
percent-encoding = "^2.3.2"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
strum_macros = "^0.28.0"
sysinfo = "^0.39.2"
tabled = { version = "^0.20.0", features = ["ansi"] }
tempfile = "^3.27.0"
tokio = { version = "^1.52.3", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "fs",
  "sync",
] }
uuid = { version = "^1.23.1", features = ["v4"] }
vortex = { version = "^0.71.0", features = ["tokio", "files"] }
vortex-datafusion = "^0.71.0"

[build-dependencies]
chrono = "^0.4.44"
chrono-tz = "^0.10.4"

[features]
default = []
# generates docs/CLI.md from the clap definitions; kept optional so clap-markdown
# stays out of the release binary. Run `just docs` (or `just verify`).
docs = ["dep:clap-markdown"]

[dev-dependencies]
assert_cmd = "^2.2.2"
criterion = { version = "^0.8.2", features = ["html_reports"] }
predicates = "^3.1.4"
rand = "^0.10.1"

[[bench]]
name = "parquet_writer"
harness = false

[[bench]]
name = "partitioning"
harness = false

[[bench]]
name = "transform_to_parquet"
harness = false

[[example]]
name = "gen-docs"
required-features = ["docs"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev] # faster dev builds
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2 # optimize deps, not your code

[profile.profiling]
inherits = "release"
debug = true

# NOTE: native profile requires RUSTFLAGS="-C target-cpu=native"
# use `just build-native` which sets this automatically
[profile.native]
inherits = "release"

[lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
similar_names = "warn"
