[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "silk_chiffon"
version = "0.1.0"
description = "Fast Arrow format conversions"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = { text = "MIT" }

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pyarrow>=14.0.0",
    "maturin>=1.7.0",
    "duckdb>=1.3.1",
]

[tool.maturin]
python-source = "python"
module-name = "silk_chiffon._silk_chiffon"
features = ["pyo3/extension-module"]
