[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "silk_chiffon"
version = "0.1.0"
description = "Fast Arrow format conversions"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = { text = "MIT" }

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pyarrow>=14.0.0",
    "maturin>=1.7.0",
    "duckdb>=1.3.2",
    "ruff>=0.1.0",
    "pyright>=1.1.402",
    "pip>=25.1.1",
    "pyarrow-stubs>=20.0.0.20250627",
]

[tool.maturin]
features = ["python"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
